--- a/Rxeos.io/Presentation/Search/SearchViewController.xib
+++ b/Rxeos.io/Presentation/Search/SearchViewController.xib
@@ -1,22 +1,88 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchViewController" customModule="Rxeos_io" customModuleProvider="target">
             <connections>
+                <outlet property="eosBalanceLabel" destination="XuX-lI-gEH" id="SEt-VE-Buz"/>
+                <outlet property="searchBar" destination="jqp-1E-Wjd" id="oD7-Mb-rVq"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cmc-VF-b8m">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="04h-SK-AWI">
+                            <rect key="frame" x="20" y="0.0" width="374" height="51.5"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Trg-Sg-AwK" userLabel="EOS Balance">
+                                    <rect key="frame" x="0.0" y="0.0" width="374" height="51.5"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EOS Balance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QJv-9F-rcJ">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                            <color key="textColor" systemColor="secondaryLabelColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XuX-lI-gEH" userLabel="EOS Balance Value">
+                                            <rect key="frame" x="0.0" y="28.5" width="374" height="23"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="y4Y-4M-aq9" firstAttribute="trailing" secondItem="04h-SK-AWI" secondAttribute="trailing" constant="20" id="1OE-nB-rZM"/>
+                        <constraint firstAttribute="bottom" secondItem="04h-SK-AWI" secondAttribute="bottom" constant="78" id="4dV-jD-iVJ"/>
+                        <constraint firstAttribute="trailing" secondItem="04h-SK-AWI" secondAttribute="trailing" constant="20" id="5yq-Ld-Iw5"/>
+                        <constraint firstItem="04h-SK-AWI" firstAttribute="top" secondItem="cmc-VF-b8m" secondAttribute="top" id="H0g-rx-Crk"/>
+                        <constraint firstItem="04h-SK-AWI" firstAttribute="leading" secondItem="y4Y-4M-aq9" secondAttribute="leading" constant="20" id="RL3-rq-OD8"/>
+                        <constraint firstItem="04h-SK-AWI" firstAttribute="top" secondItem="cmc-VF-b8m" secondAttribute="top" id="c3S-go-dAI"/>
+                        <constraint firstItem="y4Y-4M-aq9" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="04h-SK-AWI" secondAttribute="bottom" id="ig0-V5-RyN"/>
+                        <constraint firstItem="04h-SK-AWI" firstAttribute="leading" secondItem="cmc-VF-b8m" secondAttribute="leading" constant="20" id="nAJ-rN-xbM"/>
+                    </constraints>
+                    <viewLayoutGuide key="contentLayoutGuide" id="zLu-XI-11q"/>
+                    <viewLayoutGuide key="frameLayoutGuide" id="y4Y-4M-aq9"/>
+                </scrollView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="cmc-VF-b8m" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="IAR-w9-MqT"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="cmc-VF-b8m" secondAttribute="trailing" id="n0d-Nd-IGs"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="cmc-VF-b8m" secondAttribute="bottom" id="o6P-rD-Q40"/>
+                <constraint firstItem="cmc-VF-b8m" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="vrv-Pm-hEE"/>
+            </constraints>
+            <point key="canvasLocation" x="137.68115942028987" y="152.67857142857142"/>
         </view>
+        <searchBar contentMode="redraw" id="jqp-1E-Wjd">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+            <textInputTraits key="textInputTraits"/>
+            <point key="canvasLocation" x="138" y="-234"/>
+        </searchBar>
     </objects>
+    <resources>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
