--- a/Rxeos.io/Presentation/Search/SearchViewController.xib
+++ b/Rxeos.io/Presentation/Search/SearchViewController.xib
@@ -14,6 +14,7 @@
                 <outlet property="cpuMaxValue" destination="xN5-tl-KMc" id="HLz-CE-C13"/>
                 <outlet property="cpuUsedValue" destination="Ild-G8-8g0" id="ODF-fm-KNe"/>
                 <outlet property="eosBalanceLabel" destination="XuX-lI-gEH" id="SEt-VE-Buz"/>
+                <outlet property="errorLabel" destination="P96-PU-7ng" id="KHG-gG-CDe"/>
                 <outlet property="netAvailableValue" destination="HzY-wn-Hh0" id="lKM-v1-T7l"/>
                 <outlet property="netMaxValue" destination="PSB-N5-nyn" id="fU0-cs-Xyo"/>
                 <outlet property="netUsedValue" destination="fKe-a6-SQs" id="aN6-lQ-8fC"/>
@@ -31,11 +32,17 @@
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cmc-VF-b8m">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="04h-SK-AWI">
-                            <rect key="frame" x="20" y="0.0" width="374" height="705.5"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="04h-SK-AWI">
+                            <rect key="frame" x="20" y="0.0" width="374" height="742"/>
                             <subviews>
-                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Trg-Sg-AwK" userLabel="EOS Balance">
-                                    <rect key="frame" x="0.0" y="0.0" width="374" height="56.5"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P96-PU-7ng">
+                                    <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" systemColor="systemRedColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Trg-Sg-AwK" userLabel="EOS Balance">
+                                    <rect key="frame" x="0.0" y="36.5" width="374" height="56.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EOS Balance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QJv-9F-rcJ" userLabel="Balance">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
@@ -51,8 +58,8 @@
                                         </label>
                                     </subviews>
                                 </stackView>
-                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="hKQ-Jf-OiP" userLabel="CPU">
-                                    <rect key="frame" x="0.0" y="72.5" width="374" height="222.5"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="hKQ-Jf-OiP" userLabel="CPU">
+                                    <rect key="frame" x="0.0" y="109" width="374" height="222.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CPU" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bXH-xl-TDR" userLabel="CPU">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="23"/>
@@ -113,8 +120,8 @@
                                         </stackView>
                                     </subviews>
                                 </stackView>
-                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Foo-PA-A8f" userLabel="NET">
-                                    <rect key="frame" x="0.0" y="311" width="374" height="222.5"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Foo-PA-A8f" userLabel="NET">
+                                    <rect key="frame" x="0.0" y="347.5" width="374" height="222.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NET" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rm1-Yc-jOv">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="23"/>
@@ -175,8 +182,8 @@
                                         </stackView>
                                     </subviews>
                                 </stackView>
-                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mPr-Qa-slj" userLabel="RAM">
-                                    <rect key="frame" x="0.0" y="549.5" width="374" height="156"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mPr-Qa-slj" userLabel="RAM">
+                                    <rect key="frame" x="0.0" y="586" width="374" height="156"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RAM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aUi-ex-800">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="23"/>
@@ -260,6 +267,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="tertiaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
